# pysigrok

./: .pre-commit-config.yaml  README.md  justfile  pyproject.toml
.github/workflows/: build.yml
scripts/: lint.sh
sigrokdecode/: __init__.py  bits.py  cli.py  input.py  output.py  runtc.py  srzip.py
